# neotech

./: .gitignore  README.md  Тестовое задание.bat
Test_/: CMakeLists.txt  firsttaskwidget.cpp  firsttaskwidget.h  interpolator.h  mainwindow.cpp  mainwindow.h  polygonitem.cpp  polygonitem.h  secondtaskwidget.cpp  secondtaskwidget.h  shapes.h  thirdtaskwidget.cpp  thirdtaskwidget.h  vertexhandle.cpp  vertexhandle.h  Тестовое задание.lnk
